--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
-    "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/tailwind": "5.1.0",
     "@nextui-org/react": "^2.6.11",
     "astro": "^5.17.1",
     "clsx": "^2.1.1",
@@ -23,6 +23,6 @@
     "react-dom": "^19.2.4",
     "sharp": "^0.34.3",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "3.4.17"
   }
 }
