--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sharp": "^0.34.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.4.17"
